# memsparkline

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  Taskfile.yml  check.sh  go.mod  go.sum  main.go  main_test.go  memsparkline  memsparkline.py  memusage  pyproject.toml  test.ps1  tox.ini
.github/workflows/: ci.yml  lint-and-type.yml
ci/: test.sh
completions/: install.fish  memsparkline.bash  memsparkline.fish
script/: release.go
src/memsparkline/: main.py
test/: sleep.go
tests/: test_memsparkline.py
